--- a/app/src/main/res/layout/item_comment_post.xml
+++ b/app/src/main/res/layout/item_comment_post.xml
@@ -87,7 +87,7 @@
         android:layout_marginLeft="12dp"
         android:layout_marginRight="12dp"
         android:padding="5dp"
-        android:background="@color/gray_bg"
+        android:background="@drawable/shape_gray5"
         android:layout_marginBottom="12dp"
         />
 
