--- a/app/src/main/res/layout/item_ensure_order_goods.xml
+++ b/app/src/main/res/layout/item_ensure_order_goods.xml
@@ -19,15 +19,15 @@
 
         <com.cinderellavip.weight.RoundImageView
             android:id="@+id/iv_product"
-            android:layout_width="77dp"
-            android:layout_height="80dp"
+            android:layout_width="75dp"
+            android:layout_height="75dp"
             android:layout_gravity="center"
             android:scaleType="centerCrop"
             tools:src="@mipmap/demo_cardsale_banner1" />
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="75dp"
         android:layout_marginLeft="10dp"
         android:orientation="vertical">
 
@@ -67,8 +67,9 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 tools:text="规格：#901"
-                android:textSize="12sp"
-                android:layout_marginTop="3dp"
+                android:textSize="10sp"
+                android:maxLines="1"
+                android:ellipsize="end"
                 android:textColor="@color/grayText"/>
 
             <TextView
@@ -77,7 +78,7 @@
                 android:layout_height="match_parent"
                 tools:text="数量x1"
                 android:gravity="center"
-                android:textSize="12sp"
+                android:textSize="10sp"
                 android:textColor="@color/grayText"/>
 
 
@@ -99,7 +100,6 @@
                 android:id="@+id/tv_price"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="3dp"
                 android:layout_marginTop="3dp"
                 android:layout_weight="1"
                 android:textColor="@color/black_title_color"
