--- a/app/src/main/res/layout/activity_search_find.xml
+++ b/app/src/main/res/layout/activity_search_find.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -20,35 +21,16 @@
 
 
         <LinearLayout
-            android:id="@+id/ll_search"
             android:layout_width="0dp"
             android:layout_weight="1"
-            android:background="@drawable/shape_gray50"
             android:layout_height="match_parent"
             android:layout_marginTop="10dp"
             android:layout_marginBottom="6dp"
             android:layout_marginLeft="12dp"
+            android:gravity="center_vertical"
             >
 
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                android:layout_gravity="center_vertical"
-                android:src="@mipmap/icon_search_black"/>
-
-            <EditText
-                android:id="@+id/et_search"
-                android:singleLine="true"
-                android:imeOptions="actionSearch"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:hint="搜索关键字"
-                android:textSize="12sp"
-                android:textColorHint="@color/grayText"
-                android:textColor="@color/black_title_color"
-                android:layout_gravity="center_vertical"
-                android:background="@null"/>
+            <include layout="@layout/layout_search_gray"/>
 
 
         </LinearLayout>
