--- a/app/src/main/res/layout/activity_order_apply_return.xml
+++ b/app/src/main/res/layout/activity_order_apply_return.xml
@@ -155,6 +155,7 @@
 
 
             <LinearLayout
+                android:visibility="gone"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@color/white"
@@ -213,6 +214,7 @@
                                 />
 
                             <TextView
+                                android:id="@+id/tv_phone"
                                 style="@style/base_text_style_gray_small"
                                 android:lineSpacingExtra="3dp"
                                 android:paddingLeft="12dp"
