--- a/app/src/main/res/layout/fragment_life.xml
+++ b/app/src/main/res/layout/fragment_life.xml
@@ -65,7 +65,7 @@
                     android:paddingBottom="5dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="南京"
+                    android:text=""
                     android:textSize="12sp"
                     android:drawableRight="@mipmap/icon_arrow_down"
                     android:drawablePadding="5dp"
