--- a/app/src/main/res/layout/pop_bottom_share.xml
+++ b/app/src/main/res/layout/pop_bottom_share.xml
@@ -30,19 +30,20 @@
 
             <com.cinderellavip.weight.CircleImageView
                 android:id="@+id/iv_avatar"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:src="@mipmap/avater"/>
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                tools:src="@mipmap/avater"/>
             <TextView
                 android:id="@+id/tv_name"
                 style="@style/base_text_style"
-                android:text="月岛tsuki"
+                tools:text="月岛tsuki"
                 android:layout_marginLeft="10dp"
                 />
             <TextView
                 style="@style/base_text_style"
                 android:text="邀请您加入小灰服务"
                 android:textColor="@color/red"
+                android:textSize="12sp"
                 android:layout_marginLeft="10dp"
                 />
         </LinearLayout>
@@ -52,13 +53,13 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:scaleType="centerCrop"
-            android:src="@mipmap/demo_life"/>
+            tools:src="@mipmap/demo_life"/>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/white"
-            android:padding="12dp"
+            android:padding="10dp"
             android:gravity="center_vertical"
             android:orientation="horizontal">
 
@@ -71,11 +72,12 @@
                     android:id="@+id/tv_product_name"
                     style="@style/base_text_style"
                     android:lines="2"
-                    android:text="小灰服务提供专业的生活服务"
+                    android:textSize="12sp"
+                    android:text="小灰服务为您提供专业的生活服务"
                     />
 
                 <LinearLayout
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
                     android:orientation="horizontal">
@@ -83,9 +85,18 @@
                     <TextView
                         android:id="@+id/tv_price"
                         style="@style/base_text_style"
-                        android:text="物品整理"
+                        tools:text="物品整理"
+                        android:textSize="12sp"
                         android:textColor="@color/red"
-                        android:layout_marginLeft="3dp"
+                        />
+
+                    <TextView
+                        android:id="@+id/tv_advance_price"
+                        style="@style/base_text_style_gray_small"
+                        android:textColor="@color/baseColor"
+                        android:text="免费加入灰姑凉 省钱 赚钱"
+                        android:layout_marginLeft="10dp"
+                        android:textSize="10sp"
                         />
 
 
@@ -102,14 +113,16 @@
                 android:orientation="vertical">
 
                 <ImageView
+                    android:id="@+id/iv_code"
                     android:layout_width="60dp"
                     android:layout_height="60dp"
-                    android:src="@mipmap/code"/>
+                    tools:src="@mipmap/code"/>
 
                 <TextView
                     style="@style/base_text_style_gray_small"
                     android:text="扫码加入"
-                    android:layout_marginTop="5dp"
+                    android:layout_marginTop="2dp"
+                    android:textSize="10sp"
                     />
 
             </LinearLayout>
