--- a/app/src/main/res/layout/item_life_service.xml
+++ b/app/src/main/res/layout/item_life_service.xml
@@ -29,7 +29,7 @@
         android:maxLines="1"
         tools:text="物品整理"
         android:textColor="@color/black_title_color"
-        android:textSize="14sp" />
+        android:textSize="12sp" />
 
 
     <TextView
@@ -38,8 +38,8 @@
         android:layout_height="wrap_content"
         tools:text="170元/次"
         android:layout_marginTop="8dp"
-        android:textColor="@color/baseColor"
-        android:textSize="14sp" />
+        android:textColor="@color/yellow_deep"
+        android:textSize="12sp" />
 
 
 
