--- a/app/src/main/res/layout/item_detail_pic.xml
+++ b/app/src/main/res/layout/item_detail_pic.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:scaleType="centerCrop"
+    android:scaleType="fitXY"
     android:id="@+id/iv_image"
     android:src="@mipmap/demo_product_banner"
     />
